--- a/src/characters.html
+++ b/src/characters.html
@@ -23,8 +23,8 @@
       </select>
        <select type="button" class="btn" id="Sort"> 
          <option disabled> Ordenar por specie </option>
-         <option selected value="ascendente">Ascendente</option>
-         <option  value="descendente">Descendente</option>
+         <option selected value="Ascendente">Ascendente</option>
+         <option  value="Descendente">Descendente</option>
         </select>
     </div>
     <div id="container">
