--- a/characters.html
+++ b/characters.html
@@ -6,20 +6,28 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>DUB DUB DATA</title>
   <link rel="stylesheet" href="style.css" />
+  <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
 </head>
 
 <body>
-  <header>
+<header>
     <h1>DUB DUB DATA</h1>
     <img src="img/rickandmortylogo.png" alt="Logo Rick&Morty">
-      <a href="index">Inicio</a>
-  </header>
+     <a href="index.html">Inicio</a>
+     </header>
 <!-- Personajes de la serie-->
+<main>
   <section>
     <p>A continuación te presentamos los personajes de Rick and Morty, puedes dar click sobre el personaje para objeter más información. Sientete libre de explorarolos, puedes filtrarlos y ordenarlos.</p>
     <div class="botton">
-      <button type="button" class="btn">Filtrar por episodio</button>
-      <button type="button" class="btn">Ordenar por ubicación</button>
+      <select type="button" class="btn" id="filter">
+        <option  value="0">Filtrar por episodio</option>
+      </select>
+       <select type="button" class="btn" id="Sort">
+         <option value="0"> Ordenado alfabético </option>
+         <option  value="Ascendente">Ascendente</option>
+         <option  value="Descendente">Descendente</option>
+        </select>
     </div>
     <div id="container">
   </div>
@@ -31,7 +39,7 @@
         <h2 id="header">PORTAL ACCESS CARD</h2>
         <span class="close">&times;</span>
       </header>
-      <article id="bodyModal" class="modal-body">
+      <article id="bodyModal" class="modal-body"> 
         <div id="imgElement"></div>
         <div id="contentElement"></div>
       </article>
@@ -39,17 +47,27 @@
 </section>
   <section>
       <button id="seeMore">Ver más</button>
+      <button type="button" id="statbtn">Ver estadisticas</button>
   </section>
-  <footer>
+  <section class ="statistics">
+    <p>Aquí podrás encontrar algunas gráficas que te permiten entender datos de la serie como los lugares más recurrentes en los que se desarrolla de acuerdo a la ubicación actual de los personajes o si quieres saber cuantos personajes se encuentran como Gato de Schrödinger a lo largo de la trama, ademas saber cuantos personajes estan vivos, muertos y estado desconocido.</p>
+      <canvas id="myChart"></canvas>
+      <br>
+      <canvas id="chart"></canvas>      
+  </section>
+   </main>
+<footer>
  <p>Serie creada por Justin Roiland y Dan Harnoo, 2013</p>
+ <p>&copy; Diana Olarte & Daniela Ramirez, 2020</p>
  <div class="icon">
-   <a href="https://es-la.facebook.com/RickandMorty/" id="facebook"></a>
-   <a href="https://www.reddit.com/r/rickandmorty/" id="reddit"></a>
-   <a href="https://www.pinterest.es/jhonregar19/rick-and-morty/" id="pinterest"></a>
-   <a href="https://www.rick-morty.online/" id="website"></a>
+   <a href="https://es-la.facebook.com/RickandMorty/" id="facebook" target="_blank"></a>
+   <a href="https://www.reddit.com/r/rickandmorty/" id="reddit" target="_blank"></a>
+   <a href="https://www.pinterest.es/jhonregar19/rick-and-morty/" id="pinterest" target="_blank"></a>
+   <a href="https://www.rick-morty.online/" id="website" target="_blank"></a>
  </div>
   </footer>
   <script src="main.js" type="module"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.3/Chart.min.js"></script>
 </body>
 
 </html>
